sass/components/dropdown/_dropdown.scss
@import "../../utilities/utilities/sizes";
@import "../../utilities/style/textStyles";
@import "../../utilities/utilities/borders";
@import "../../utilities/utilities/shadows";
@import "../../utilities/utilities/spaces";
@import "../../utilities/style/colors";




$dropdown-menu-min-width: 160px;
$dropdown-menu-max-width: 460px;

$dropdown-menu-min-height: map-get($pv-sizes, small);


.dropdown-menu {
  // display: none;
 position: absolute;
  // top: 100%;
  @include box-shadow-regular();
  z-index:98; // #todo
  min-width: $dropdown-menu-min-width;
  max-width: $dropdown-menu-max-width;


  .dropdown-list {
    display: block;
    line-height: map-get($pv-sizes, small);
    padding: 0 map-get($pv-spaces, small);
    position: relative;

    &:focus,
    &.is-active {
      background-color: $pv-green-light;
    }

    &:hover {
      background-color: $pv-grayscale-7;
      cursor: pointer; // #todo
    }

    &.is-disabled {
      @include opacity(0.5);
      pointer-events: none;
      background-color: transparent;
    }

    &.is-delimiter {
      line-height: map-get($pv-sizes, small);
      width: 100%;
      background-color: $pv-grayscale-6;
      padding-left: map-get($pv-spaces, small);
      padding-right: 0;
      display: flex;
      justify-content: space-between;
  
      &:hover {
        cursor: pointer;
      }
  
    }

  }

  .divider {
    background-color: $pv-grayscale-5;
    border: none;
    display: block;
    height: 1px;
  }

  .has-filter {
    padding: map-get($pv-spaces, small);
  }



}

